# RoboterPoweredCNC

./: pyproject.toml
ViewModel/: viewModel.py
